<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            android:focusable="true"
            app:errorEnabled="true"
            android:theme="@style/AppTheme.TextInputLayout"
            app:boxStrokeColor="@color/inputBorder"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:id="@+id/login_txt_phone_number_layout"
    >

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/phone_number"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/textColorPrimary" android:textColorHighlight="@color/textColorPrimary"
                android:singleLine="true" android:id="@+id/login_txt_phone_number"/>

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/register_phone_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_txt_phone_number_info"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@+id/login_txt_phone_number_layout"
            android:layout_marginTop="16dp"
            android:textColor="@color/infoColor"/>

    <com.google.android.material.button.MaterialButton
            android:text="@string/next"
            android:layout_height="wrap_content"
            android:id="@+id/register_btn_next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/FarsiButtonStyle"
            app:cornerRadius="25dp" android:background="@color/blue" app:backgroundTint="@color/blue"
            android:layout_marginBottom="16dp" android:layout_marginStart="24dp"
            app:layout_constraintHorizontal_chainStyle="spread_inside" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/register_btn_cancel" android:layout_width="0dp"
    />
    <com.google.android.material.button.MaterialButton
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_btn_cancel" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent" app:cornerRadius="25dp"
            android:background="@color/errorColor" app:backgroundTint="@color/errorColor"
            style="@style/FarsiButtonStyle"
            android:paddingStart="32dp" android:paddingEnd="32dp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>