<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.login.LoginPageTwoFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView android:layout_width="match_parent"
                                                       android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="match_parent">
            <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_page_two_progress_bar"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:indeterminate="true" android:visibility="invisible"/>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary"
                    android:focusable="true"
                    app:errorEnabled="true"
                    android:layoutDirection="ltr"
                    android:theme="@style/AppTheme.TextInputLayout"
                    app:boxStrokeColor="@color/inputBorder"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                    android:id="@+id/textInputLayout"
                    android:layout_marginTop="80dp" app:layout_constraintTop_toTopOf="@+id/login_page_two_progress_bar">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/verify_code"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textColor="@color/textColorPrimary"
                        android:textColorHighlight="@color/textColorPrimary"
                        android:singleLine="true" android:id="@+id/login_edt_verify_code"/>

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                    android:text="@string/login_verify_code_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/login_verify_code_info"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                    android:layout_marginTop="8dp" android:textColor="@color/infoColor"
                    android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="@string/_03_00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/login_verify_code_timer"
                    android:textAlignment="center" android:textColor="@color/timeColor"
                    android:textSize="36sp"
                    app:layout_constraintTop_toBottomOf="@+id/login_verify_code_info"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp"/>

            <com.google.android.material.button.MaterialButton
                    android:text="@string/send_verify_code"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_btn_send"
                    style="@style/FarsiButtonStyle"
                    android:background="@color/colorAccent" app:backgroundTint="@color/colorAccent"
                    android:layout_width="0dp"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/login_verify_code_timer"
                    android:textSize="14sp" android:paddingBottom="10dp" android:paddingLeft="16dp"
                    android:paddingRight="16dp" android:paddingTop="8dp" android:layout_marginStart="24dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</FrameLayout>