<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent" android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
            <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_progress_bar"
                    android:indeterminate="true" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="invisible"/>
            <TextView
                    android:text="@string/join"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4" android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/register_progress_bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp" android:layout_marginEnd="24dp"/>
            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/default_avatar"
                    app:civ_border_color="@color/borderColor"
                    app:civ_border_width="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/register_img_profile_image" app:layout_constraintTop_toBottomOf="@+id/textView4"
                    android:layout_marginTop="16dp"/>

            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_add_circle"
                    android:id="@+id/register_image_add"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/add_image"
                    app:layout_constraintBottom_toBottomOf="@+id/register_img_profile_image"
                    app:layout_constraintEnd_toEndOf="@+id/register_img_profile_image" android:layout_marginEnd="4dp"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/textColorSecondary"
                    app:errorEnabled="true"
                    android:theme="@style/AppTheme.TextInputLayout"
                    app:boxStrokeColor="@color/inputBorder"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                    android:id="@+id/textInputLayout"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/register_img_profile_image"
            >

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textColor="@color/textColorPrimary"
                        android:textColorHighlight="@color/textColorPrimary" android:singleLine="true"
                        android:id="@+id/register_edt_username"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/textColorSecondary"
                    android:focusable="true"
                    app:errorEnabled="true"
                    android:theme="@style/AppTheme.TextInputLayout"
                    app:boxStrokeColor="@color/inputBorder"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/register_name"
                    android:layoutDirection="rtl"
                    android:textDirection="rtl"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp" app:helperTextEnabled="true"
                    app:helperText="ترجیحا به فارسی بنویسید">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textDirection="rtl"
                        android:textColor="@color/textColorPrimary"
                        android:textColorHighlight="@color/textColorPrimary" android:singleLine="true"
                        android:id="@+id/register_edt_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    app:errorEnabled="true"
                    android:theme="@style/AppTheme.TextInputLayout"
                    app:boxStrokeColor="@color/inputBorder"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/register_family"
                    android:textDirection="rtl"
                    android:layoutDirection="rtl"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/register_name"
                    android:textColorHint="@color/textColorSecondary" app:helperTextEnabled="true"
                    app:helperText="ترجیحا به فارسی بنویسید">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/family"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textDirection="rtl"
                        android:textColor="@color/textColorPrimary"
                        android:textColorHighlight="@color/textColorPrimary" android:singleLine="true"
                        android:id="@+id/register_edt_family"/>

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:background="@color/background"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                 android:id="@+id/frameLayout">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                    android:text="@string/register"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_btn_signup"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/FarsiButtonStyle"
                    app:cornerRadius="25dp" android:background="@color/blue" app:backgroundTint="@color/blue"
                    android:layout_marginStart="24dp"
                    app:layout_constraintHorizontal_chainStyle="spread_inside" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toStartOf="@+id/register_btn_cancel" android:layout_width="0dp"
                    app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="16dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
            <com.google.android.material.button.MaterialButton
                    android:text="@string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_btn_cancel" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
                    app:cornerRadius="25dp"
                    android:background="@color/errorColor" app:backgroundTint="@color/errorColor"
                    style="@style/FarsiButtonStyle"
                    android:paddingStart="32dp" android:paddingEnd="32dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>




