<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/default_avatar"
                app:civ_border_color="@color/borderColor"
                app:civ_border_width="2dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/register_image"/>

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_add_circle"
                android:id="@+id/register_image_add"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/add_image"
                app:layout_constraintBottom_toBottomOf="@+id/register_image"
                app:layout_constraintEnd_toEndOf="@+id/register_image" android:layout_marginEnd="4dp"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textColorSecondary"
                android:focusable="true"
                app:errorEnabled="true"
                android:theme="@style/AppTheme.TextInputLayout"
                app:boxStrokeColor="@color/inputBorder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                android:id="@+id/textInputLayout"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/register_image">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/textColorPrimary"
                    android:textColorHighlight="@color/textColorPrimary" android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textColorSecondary"
                android:focusable="true"
                app:errorEnabled="true"
                android:theme="@style/AppTheme.TextInputLayout"
                app:boxStrokeColor="@color/inputBorder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/register_name"
                android:layoutDirection="rtl"
                android:textDirection="rtl"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textDirection="rtl"
                    android:textColor="@color/textColorPrimary"
                    android:textColorHighlight="@color/textColorPrimary" android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                app:errorEnabled="true"
                android:theme="@style/AppTheme.TextInputLayout"
                app:boxStrokeColor="@color/inputBorder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/register_family"
                android:textDirection="rtl"
                android:layoutDirection="rtl"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/register_name"
                android:textColorHint="@color/textColorSecondary">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/family"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textDirection="rtl"
                    android:textColor="@color/textColorPrimary"
                    android:textColorHighlight="@color/textColorPrimary" android:singleLine="true"
            />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>